--- a/pages/subpages/mall/hotel/subpages/order-check/index.wxss
+++ b/pages/subpages/mall/hotel/subpages/order-check/index.wxss
@@ -1,5 +1,43 @@
+
+
+.nav-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 44px;
+  box-sizing: inherit;
+  z-index: 100;
+}
+.nav-bar.active {
+  background: #4184f7;
+}
+.nav-bar-unit {
+  padding: 0 8px;
+  width: 48px;
+}
+.hotel-name {
+  flex: 1;
+  text-align: center;
+  color: #fff;
+  font-size: 16px;
+}
+.english-name {
+  font-size: 10px;
+}
+
 .container {
+  position: relative;
   padding: 24rpx 24rpx calc(150rpx + env(safe-area-inset-bottom));
+}
+.bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 600rpx;
+  background: linear-gradient(180deg, #1a69f1 0%, #f5f6f8 100%);
+  z-index: -1;
 }
 
 .ticket {
@@ -11,27 +49,6 @@
   color: #333;
   font-size: 32rpx;
   font-weight: bold;
-}
-.split-line {
-  position: relative;
-  border: 1rpx dashed #eee;
-  overflow: inherit;
-}
-.split-line::before, .split-line::after {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 32rpx;
-  height: 32rpx;
-  content: "";
-  border-radius: 50%;
-  background: #f5f6f7;
-}
-.split-line::before {
-  left: -20rpx;
-}
-.split-line::after {
-  right: -20rpx;
 }
 
 .ticket-more {
@@ -159,6 +176,9 @@
   color: #333;
 }
 .tourist-info-input {
+  flex: 1;
+}
+.num-setpper {
   flex: 1;
 }
 
