--- a/utils/filters/time.wxs
+++ b/utils/filters/time.wxs
@@ -56,7 +56,7 @@ function countDown(timeStamp, statement) {
   var minutes = format(Math.floor((timeStamp % (60 * 60)) / 60));
   var seconds = format(Math.floor(timeStamp % 60));
   return statement
-    .replace("dd", days)
+    .replace("d", days)
     .replace("hh", hours)
     .replace("mm", minutes)
     .replace("ss", seconds);
