feat: 酒店房间订单确认

--- a/pages/subpages/mall/hotel/subpages/order-check/components/price-detail-popup/index.wxml
+++ b/pages/subpages/mall/hotel/subpages/order-check/components/price-detail-popup/index.wxml
@@ -3,8 +3,8 @@
     <view class="popup-title row center">费用明细</view>
     <view class="price-list">
       <view class="price-item row between">
-        <view class="price-name">{{category}}</view>
-        <view class="price-detail">¥{{price}} x {{num}}</view>
+        <view class="price-name">{{name}} x {{night}}晚 x {{num}}间 {{breakfastNum ? '含' + breakfastNum + '份早餐' : ''}}</view>
+        <view class="price-detail">¥{{price}} x {{night}} x {{num}}</view>
       </view>
     </view>
   </view>
