--- a/pages/subpages/mine/order-center/index.wxml
+++ b/pages/subpages/mine/order-center/index.wxml
@@ -7,7 +7,7 @@
     <view class="title">门票订单</view>
     <image class="arrow" src="./images/arrow.png" />
   </navigator>
-  <navigator class="list row between" url="./subpages/my-shop/index" hover-class="none">
+  <navigator class="list row between" url="./subpages/hotel-order-list/index" hover-class="none">
     <view class="title">酒店订单</view>
     <image class="arrow" src="./images/arrow.png" />
   </navigator>
