--- a/pages/subpages/mine/order-center/subpages/hotel-order-list/components/order-list/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/hotel-order-list/components/order-list/index.wxml
@@ -12,7 +12,7 @@
       <view class="order-status">{{ORDER.statusDesc(item.status)}}</view>
     </view>
     <view class="list-content">
-      <goods-list list="{{item.goodsList}}" />
+      <room-item info="{{item.roomInfo}}" />
     </view>
     <view class="list-footer">
       <view class="total-info row baseline">
