--- a/pages/subpages/mine/order-center/subpages/hotel-order-list/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/hotel-order-list/index.wxml
@@ -1,4 +1,4 @@
-<nav-bar title="商品订单" custom="{{true}}" bind:navigateBack="navigateBack">
+<nav-bar title="酒店订单" custom="{{true}}" bind:navigateBack="navigateBack">
   <view class="menu-wrap">
     <view 
       class="menu-item {{curMenuIndex === index ? 'selected' : ''}} row center" 
