--- a/pages/subpages/mine/order-center/subpages/hotel-order-list/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/hotel-order-list/index.wxml
@@ -1,5 +1,5 @@
 <nav-bar title="酒店订单" custom="{{true}}" bind:navigateBack="navigateBack">
-  <view class="menu-wrap">
+  <view class="menu row">
     <view 
       class="menu-item {{curMenuIndex === index ? 'selected' : ''}} row center" 
       wx:for="{{menuList}}" wx:key="index" 
