--- a/pages/subpages/mine/order-center/subpages/hotel-order-list/index.wxss
+++ b/pages/subpages/mine/order-center/subpages/hotel-order-list/index.wxss
@@ -1,13 +1,10 @@
-.menu-wrap {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 40px;
+.menu {
+  justify-content: space-around;
+  padding: 0 6px;
   background: #fff;
   border-top: 1px solid #f5f6f8;
 }
 .menu-item {
-  flex: 1;
   height: 40px;
   color: #666;
   font-size: 14px;
