--- a/pages/subpages/mine/order-center/subpages/hotel-order-list/components/room-item/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/hotel-order-list/components/room-item/index.wxml
@@ -1,20 +1,37 @@
-<view class="room-item row">
-  <image class="room-img" src="{{info.imageList[0]}}" mode="aspectFill" lazy-load />
-  <view class="room-content">
-    <view class="room-name omit">{{info.typeName}}</view>
-    <view class="room-detail-wrap">
-      <view class="room-info-list row">
-        <view class="room-info" wx:if="{{info.breakfastNum}}">{{info.breakfastNum}}份早餐</view>
-        <view class="room-info">{{info.bedDesc}}</view>
-        <view class="room-info">{{info.areaSize}}m²</view>
+<wxs module="TIME" src="/utils/filters/time.wxs" />
+
+<view class="room-item">
+  <view class="room-item-main row">
+    <image class="room-img" src="{{info.imageList[0]}}" mode="aspectFill" lazy-load />
+    <view class="room-content">
+      <view class="room-name">{{info.hotelName}} | {{info.typeName}}</view>
+      <view class="room-detail-wrap">
+        <view class="room-info-list row">
+          <view class="room-info" wx:if="{{info.breakfastNum}}">{{info.breakfastNum}}份早餐</view>
+          <view class="room-info">{{info.bedDesc}}</view>
+          <view class="room-info">{{info.guestNum}}人入住</view>
+        </view>
+        <view class="cancellable-status row {{ info.cancellable ? '' : 'uncancellable' }}">
+          <image class="cancellable-icon" src="./images/{{info.cancellable ? '' : 'un'}}cancellable.png" />
+          <view>{{info.cancellable ? TIME.transform(info.checkInDate * 1000, 'MM月DD日') + "16点前取消扣除10%手续费" : "不可取消"}}</view>
+        </view>
+      </view>
+      <view class="row end">
+        <price-unit price="{{info.price || 0}}" color="#333" unit="/晚" unitColor="#333" />
       </view>
     </view>
-    <view class="room-price-wrap">
-      <price-unit price="{{info.price || 0}}" color="#333" unit="/晚" unitColor="#333" />
-      <view class="count-wrap">
-        <text>x</text>
-        <text class="count">{{info.number}}</text>
+  </view>
+  <view class="additional-info">
+    <view class="additional-info-item row between">
+      <view class="additional-info-label">住离日期</view>
+      <view class="additional-info-content">
+        <span>{{TIME.transform(info.checkInDate * 1000, 'MM月DD日')}}-{{TIME.transform(info.checkOutDate * 1000, 'MM月DD日')}}，</span>
+        <span class="count">共{{TIME.calculateDuration(info.checkInDate, 'd', info.checkOutDate)}}晚</span>
       </view>
+    </view>
+    <view class="additional-info-item row between">
+      <view class="additional-info-label">房间数量</view>
+      <view class="additional-info-content count">{{info.number}}间</view>
     </view>
   </view>
 </view>
