--- a/pages/subpages/mine/order-center/subpages/hotel-order-list/components/order-list/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/hotel-order-list/components/order-list/index.wxml
@@ -17,7 +17,7 @@
     <view class="list-footer">
       <view class="total-info row baseline">
         <view>{{ORDER.paymentDesc(item.status)}}：</view>
-        <price-unit price="{{item.paymentAmount}}" color="#333" fontSize="26rpx" integerFontSize="36rpx" />
+        <price-unit price="{{item.paymentAmount}}" fontSize="26rpx" integerFontSize="36rpx" />
       </view>
       <view class="btn-wrap">
         <button 
