--- a/pages/subpages/mine/order-center/subpages/hotel-order-list/components/room-item/index.wxss
+++ b/pages/subpages/mine/order-center/subpages/hotel-order-list/components/room-item/index.wxss
@@ -38,17 +38,39 @@
   border-right: none;
 }
 
-.room-price-wrap {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.count-wrap {
+.cancellable-status {
+  margin-top: 12rpx;
+  color: #1dc3c1;
   font-size: 24rpx;
-  color: #3979BE;
+}
+.cancellable-status.uncancellable {
+  color: #333;
+}
+.cancellable-icon {
+  margin-right: 8rpx;
+  width: 26rpx;
+  height: 26rpx;
+}
+
+
+
+.additional-info {
+  margin-top: 24rpx;
+  padding-top: 12rpx;
+  border-top: 1px solid #eee;
+}
+.additional-info-item {
+  margin-top: 12rpx;
+  font-size: 24rpx;
+}
+.additional-info-label {
+  color: #333;
+  font-weight: 500;
+}
+.additional-info-content {
+  color: #666;
 }
 .count {
-  margin-left: 5rpx;
-  font-size: 28rpx;
+  color: #3979BE;
   font-weight: 500;
 }
