--- a/pages/subpages/mine/order-center/subpages/hotel-order-list/subpages/order-detail/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/hotel-order-list/subpages/order-detail/index.wxml
@@ -60,11 +60,6 @@
 <view class="bottom-bar">
   <button 
     class="btn" 
-    wx:if="{{orderInfo.status === 301}}" 
-    bindtap="navToShipping" data-id="{{orderInfo.id}}"
-  >查看物流</button>
-  <button 
-    class="btn" 
     wx:if="{{orderInfo.status === 102 || orderInfo.status === 103 || orderInfo.status === 104 || orderInfo.status === 401 || orderInfo.status === 402}}" 
     bindtap="deleteOrder" data-id="{{orderInfo.id}}" data-index="{{index}}"
   >删除订单</button>
@@ -74,20 +69,20 @@
     bindtap="cancelOrder" data-id="{{orderInfo.id}}" data-index="{{index}}"
   >取消订单</button>
   <button 
-    class="btn active"
-    wx:if="{{orderInfo.status === 301}}" 
-    bindtap="confirmOrder" data-id="{{orderInfo.id}}" data-index="{{index}}"
-  >确认收货</button>
-  <button 
     class="btn active" 
     wx:if="{{orderInfo.status === 101}}" 
     bindtap="payOrder" data-id="{{orderInfo.id}}" data-index="{{index}}"
   >继续付款</button>
   <button 
     class="btn active" 
-    wx:if="{{orderInfo.status === 202}}"
+    wx:if="{{orderInfo.status === 201 || (orderInfo.status === 301 && orderInfo.roomInfo.cancellable)}}"
     bindtap="refundOrder" data-id="{{orderInfo.id}}" data-index="{{index}}"
   >申请退款</button>
+  <button 
+    class="btn active" 
+    wx:if="{{orderInfo.status === 301}}" 
+    catchtap="confirmOrder" data-id="{{orderInfo.id}}" data-index="{{index}}"
+  >确认入住</button>
   <button 
     class="btn active" 
     wx:if="{{orderInfo.status === 401 || orderInfo.status === 402}}" 
