--- a/pages/subpages/mine/merchant-center/subpages/hotel-management/components/order-list/index.wxml
+++ b/pages/subpages/mine/merchant-center/subpages/hotel-management/components/order-list/index.wxml
@@ -1,4 +1,4 @@
-<wxs module="ORDER" src="../../../../../utils/scenicOrder.wxs" />
+<wxs module="ORDER" src="../../../../../utils/hotelOrder.wxs" />
 
 <view class="order-list">
   <view class="order-item" wx:for="{{list}}" wx:key="index" catchtap="navToDetail" data-id="{{item.id}}">
@@ -10,7 +10,7 @@
       <view class="order-status">{{ORDER.statusDesc(item.status)}}</view>
     </view>
     <view class="list-content">
-      <ticket-item ticketInfo="{{item.ticketInfo}}" />
+      <room-item info="{{item.roomInfo}}" />
     </view>
     <view class="list-footer">
       <view class="total-info row baseline">
@@ -40,7 +40,7 @@
           class="btn active" 
           wx:if="{{item.status === 201}}"
           catchtap="deliverOrder" data-id="{{item.id}}" data-index="{{index}}"
-        >去发货</button>
+        >确认订单</button>
       </view>
     </view>
   </view>
