--- a/pages/subpages/mine/merchant-center/subpages/hotel-management/index.wxss
+++ b/pages/subpages/mine/merchant-center/subpages/hotel-management/index.wxss
@@ -179,10 +179,9 @@
 }
 
 .menu-wrap {
-  display: flex;
-  align-items: center;
+  justify-content: space-around;
+  padding: 0 12px;
   width: 100%;
-  height: 40px;
   background: #fff;
   border-top: 1px solid #f5f6f8;
 }
@@ -191,7 +190,6 @@
   left: 0;
 }
 .menu-item {
-  flex: 1;
   height: 40px;
   color: #666;
   font-size: 14px;
