--- a/components/video-item/index.wxml
+++ b/components/video-item/index.wxml
@@ -11,7 +11,7 @@
       <image class="video-icon" src="./images/play.png" />
     </view>
     <view class="address-info" wx:if="{{item.address}}">
-      <image class="address-icon" src="/images/address.png" />
+      <image class="address-icon" src="https://img.ubo.vip/tiddler/address.png" />
       <text class="address-detail omit single-line">{{item.address}}</text>
     </view>
   </view>
