--- a/pages/subpages/mall/goods/index.wxml
+++ b/pages/subpages/mall/goods/index.wxml
@@ -1,6 +1,6 @@
 <view class="nav-bar" style="padding-top: {{statusBarHeight}}px;">
   <view class="search-bar-wrap">
-    <image class="back-icon" src="/images/back.png" bindtap="navBack" />
+    <image class="back-icon" src="https://img.ubo.vip/tiddler/back.png" bindtap="navBack" />
     <view class="search-bar" bindtap="search">
       <image class="search-icon" src="/images/search.png" />
       <text class="placeholder">搜索商品</text>
