--- a/pages/subpages/mall/hotel/index.wxml
+++ b/pages/subpages/mall/hotel/index.wxml
@@ -2,7 +2,7 @@
 
 <view class="nav-bar" style="padding-top: {{statusBarHeight}}px;">
   <view class="search-bar-wrap">
-    <image class="back-icon" src="/images/back.png" bindtap="navBack" />
+    <image class="back-icon" src="https://img.ubo.vip/tiddler/back.png" bindtap="navBack" />
     <view class="search-bar">
       <view class="calendar-bar" bindtap="showCalendarPopup">
         <view class="calendar-item">
