--- a/pages/tab-bar-pages/mall/index.wxml
+++ b/pages/tab-bar-pages/mall/index.wxml
@@ -1,6 +1,6 @@
 <view class="nav-bar {{navBarActive ? 'active': ''}}" style="padding-top: {{statusBarHeight}}px">
   <view class="search-bar {{navBarActive ? 'active': ''}}" bindtap="search">
-    <image class="search-icon" src="/images/search.png" />
+    <image class="search-icon" src="https://img.ubo.vip/tiddler/search.png" />
     <text class="placeholder">搜索景点、酒店等</text>
   </view>
 </view>
