--- a/components/note-item/index.wxml
+++ b/components/note-item/index.wxml
@@ -4,7 +4,7 @@
   <view class="cover-wrap">
     <image class="cover" src="{{item.imageList[0]}}" mode="widthFix" lazy-load />
     <view class="private-tag row" wx:if="{{item.isPrivate}}">
-      <image class="private-icon" src="/images/private-icon.png" />
+      <image class="private-icon" src="https://img.ubo.vip/tiddler/private-icon.png" />
       <text>私密</text>
     </view>
     <view class="address-info" wx:if="{{item.address}}">
