--- a/pages/subpages/mall/scenic-spot/index.wxml
+++ b/pages/subpages/mall/scenic-spot/index.wxml
@@ -2,7 +2,7 @@
   <view class="search-bar-wrap">
     <image class="back-icon" src="https://img.ubo.vip/tiddler/back.png" bindtap="navBack" />
     <view class="search-bar" bindtap="search">
-      <image class="search-icon" src="/images/search.png" />
+      <image class="search-icon" src="https://img.ubo.vip/tiddler/search.png" />
       <text class="placeholder">搜索景点</text>
     </view>
   </view>
