--- a/pages/subpages/common/pay/index.wxml
+++ b/pages/subpages/common/pay/index.wxml
@@ -1,2 +1,2 @@
-<image class="bg" mode="aspectFill" src="http://img.ubo.vip/tiddler/pay_bg.png" />
+<image class="bg" mode="aspectFill" src="https://img.ubo.vip/tiddler/temp/pay_bg.png" />
 <view class="btn">返回</view>
